tests/api/reference/negative/04-nested-late-layout.asm
emit.u8(0x11)

defer {
    late_layout {
        emit.u8(0x22)
    }
}
